claened up embedded2

--- a/embedded2.html
+++ b/embedded2.html
@@ -15,7 +15,7 @@
       botName: 'TightropeBot',
       botConvoDescription: 'Is Tightrope right for you?',
       botId: 'learning',
-      enableReset: true,
+      enableReset: false,
       showConversationsButton: false,
       extraStylesheet: 'https://chillbasslines.github.io/botpress-css/modern.css'
     }) 
@@ -37,6 +37,8 @@
           botName: 'TightropeBot',
           botConvoDescription: 'Is Tightrope right for you?',
           botId: 'learning',
+          enableReset: false,
+          showConversationsButton: false,
           extraStylesheet: 'https://chillbasslines.github.io/botpress-css/modern.css',
           userId: rand + brokerageId.substr(brokerageId.length - 6)
         })
