--- a/embedded3.html
+++ b/embedded3.html
@@ -21,11 +21,11 @@
     }) 
     let rand = Math.floor(Math.random() * 100000000);
     const brokerageId = '5cec7d5435bb0200174811f4';
-    setTimeout(function(){window.botpressWebChat.sendEvent({
+    document.onload = function(){window.botpressWebChat.sendEvent({
       type: 'set-brokerage',
       channel: 'web',
       brokerage: brokerageId
-    })}, 2000);
+    });
     window.addEventListener('message', message => {
       let id = message.data.userId;
       if(id.substr(id.length - 6) !== brokerageId.substr(brokerageId.length - 6)) {
