--- a/embedded3.html
+++ b/embedded3.html
@@ -12,20 +12,15 @@
   <script>
     window.botpressWebChat.init({
       host: 'https://tightropechat.herokuapp.com',
-      botName: 'TightropeBot',
-      botConvoDescription: 'Is Tightrope right for you?',
       botId: 'learning',
-      enableReset: true,
-      showConversationsButton: false,
-      extraStylesheet: 'https://chillbasslines.github.io/botpress-css/modern.css'
     }) 
     let rand = Math.floor(Math.random() * 100000000);
     const brokerageId = '5cec7d5435bb0200174811f4';
-    document.onload = function(){window.botpressWebChat.sendEvent({
+    window.onload = function(){window.botpressWebChat.sendEvent({
       type: 'set-brokerage',
       channel: 'web',
       brokerage: brokerageId
-    })};
+    })
     window.addEventListener('message', message => {
       let id = message.data.userId;
       if(id.substr(id.length - 6) !== brokerageId.substr(brokerageId.length - 6)) {
@@ -38,7 +33,8 @@
           userId: rand + brokerageId.substr(brokerageId.length - 6)
         })
       }
-    })
+    })};
+
   </script>
 
 </html>
