--- a/embedded3.html
+++ b/embedded3.html
@@ -15,7 +15,7 @@
       botId: 'learning',
     }) 
 
-    window.onload = function(){
+    window.onload = () => {
     let rand = Math.floor(Math.random() * 100000000);
     const brokerageId = '5cec7d5435bb0200174811f4';
     window.botpressWebChat.sendEvent({
