--- a/embedded3.html
+++ b/embedded3.html
@@ -10,10 +10,25 @@
 
 
   <script>
-    window.botpressWebChat.init({
-      host: 'https://tightropechat.herokuapp.com',
-      botId: 'learning',
-    }) 
+
+    window.addEventListener('message', message => {
+      let id = message.data.userId;
+      if(id.substr(id.length - 6) !== brokerageId.substr(brokerageId.length - 6)) {
+        window.botpressWebChat.configure({
+          userId: rand + brokerageId.substr(brokerageId.length - 6)
+        })
+      }
+    })
+
+    window.onload = () => {
+      window.botpressWebChat.init({
+        host: 'https://tightropechat.herokuapp.com',
+        botId: 'learning',
+        botName: 'Yacht Bot 2',
+        botConvoDescription: 'Grab your favorite yacht',
+        extraStylesheet: 'https://chillbasslines.github.io/botpress-css/modern.css'
+      })
+    };
 
     window.onload = () => {
       let rand = Math.floor(Math.random() * 100000000);
@@ -24,20 +39,6 @@
         brokerage: brokerageId
       })
     };
-
-    window.addEventListener('message', message => {
-      let id = message.data.userId;
-      if(id.substr(id.length - 6) !== brokerageId.substr(brokerageId.length - 6)) {
-        window.botpressWebChat.configure({
-          host: 'https://tightropechat.herokuapp.com',
-          botName: 'Yacht Bot 2',
-          botConvoDescription: 'Grab your favorite yacht',
-          botId: 'learning',
-          extraStylesheet: 'https://chillbasslines.github.io/botpress-css/modern.css',
-          userId: rand + brokerageId.substr(brokerageId.length - 6)
-        })
-      }
-    })
   </script>
 
 </html>
