--- a/embedded3.html
+++ b/embedded3.html
@@ -1,42 +1,23 @@
 <html>
   <head>
     <title>Embedded Webchat</title>
-    <script src="https://tightropechat.herokuapp.com/assets/modules/channel-web/inject.js"></script>
   </head>
 
   <body>
     This is an example of embedded webchat
+    <script src="tightrope_v1.js"></script>
+    <script type="text/javascript">
+        window.botpressWebChat.init({
+          host: 'http://localhost:3000',
+          botId: 'learning',
+          botName: 'Yacht Bot 2',
+          botConvoDescription: 'Grab your favorite yacht',
+          ref: '5cec7d5435bb0200174811f4',
+          extraStylesheet: 'https://chillbasslines.github.io/botpress-css/modern.css'
+        })
+    </script>
   </body>
 
-
-  <script>
-    const brokerageId = '5cec7d5435bb0200174811f4';
-
-    window.addEventListener('message', message => {
-      let id = message.data.userId;
-      if(id.substr(id.length - 6) !== brokerageId.substr(brokerageId.length - 6)) {
-        window.botpressWebChat.configure({
-          userId: rand + brokerageId.substr(brokerageId.length - 6)
-        })
-      }
-    })
-
-    window.onload = () => {
-      window.botpressWebChat.init({
-        host: 'https://tightropechat.herokuapp.com',
-        botId: 'learning',
-        botName: 'Yacht Bot 2',
-        botConvoDescription: 'Grab your favorite yacht',
-        extraStylesheet: 'https://chillbasslines.github.io/botpress-css/modern.css'
-      })
-      let rand = Math.floor(Math.random() * 100000000);
-      window.botpressWebChat.sendEvent({
-        type: 'set-brokerage',
-        channel: 'web',
-        brokerage: brokerageId
-      })
-    };
-
-  </script>
+ 
 
 </html>
