--- a/embedded3.html
+++ b/embedded3.html
@@ -9,10 +9,9 @@
     <script type="text/javascript">
         window.botpressWebChat.init({
           host: 'http://localhost:3000',
-          botId: 'learning',
-          botName: 'Yacht Bot 2',
-          botConvoDescription: 'Grab your favorite yacht',
           brokerageId: '5cec7d5435bb0200174811f4',
+          botName: '',
+          botConvoDescription: '',
           extraStylesheet: 'https://chillbasslines.github.io/botpress-css/modern.css'
         })
     </script>
