--- a/embedded.html
+++ b/embedded.html
@@ -10,8 +10,8 @@
         window.botpressWebChat.init({
           host: 'http://localhost:3000',
           brokerageId: '5ce5d0ac9debbe001785f5b3',
-          botName: 'Yacht Bot 2',
-          botConvoDescription: 'Grab your favorite yacht',
+          botName: '',
+          botConvoDescription: '',
           extraStylesheet: 'https://chillbasslines.github.io/botpress-css/modern.css'
         })
     </script>
