--- a/embedded.html
+++ b/embedded.html
@@ -5,14 +5,13 @@
 
   <body>
     This is an example of embedded webchat
-    <script src="https://chillbasslines.github.io/botpress-css/tightrope_v1.js"></script>
+    <script type="text/javascript" src="https://chillbasslines.github.io/botpress-css/tightrope_v1.js"></script>
     <script type="text/javascript">
         window.botpressWebChat.init({
-          host: 'http://localhost:3000',
+          host: 'https://tightropechat.herokuapp.com',
           brokerageId: '5ce5d0ac9debbe001785f5b3',
           botName: '',
-          botConvoDescription: '',
-          extraStylesheet: 'https://chillbasslines.github.io/botpress-css/modern.css'
+          botConvoDescription: ''
         })
     </script>
   </body>
