--- a/embedded3.html
+++ b/embedded3.html
@@ -8,11 +8,10 @@
     <script src="https://chillbasslines.github.io/botpress-css/tightrope_v1.js"></script>
     <script type="text/javascript">
         window.botpressWebChat.init({
-          host: 'http://localhost:3000',
+          host: 'https://tightropechat.herokuapp.com',
           brokerageId: '5cec7d5435bb0200174811f4',
-          botName: '',
-          botConvoDescription: '',
-          extraStylesheet: 'https://chillbasslines.github.io/botpress-css/modern.css'
+          botName: 'Bobby Bob',
+          botConvoDescription: 'Derpa dave'
         })
     </script>
   </body>
