fixed embeded names

--- a/embedded3.html
+++ b/embedded3.html
@@ -4,14 +4,13 @@
   </head>
 
   <body>
-    This is an example of embedded webchat
+    This is an example of embedded webchat for the love of my life.
     <script src="https://chillbasslines.github.io/botpress-css/tightrope_v1.js"></script>
     <script type="text/javascript">
         window.botpressWebChat.init({
-          host: 'https://tightropechat.herokuapp.com',
-          brokerageId: '5cec7d5435bb0200174811f4',
-          botName: 'Bobby Bob',
-          botConvoDescription: 'Derpa dave'
+          brokerageId: '5ce5d0ac9debbe001785f5b3',
+          botName: 'YachtBot',
+          botConvoDescription: 'Let&#39;s find you your perfect yacht'
         })
     </script>
   </body>
