--- a/embedded3.html
+++ b/embedded3.html
@@ -10,7 +10,7 @@
         window.botpressWebChat.init({
           brokerageId: '5ce5d0ac9debbe001785f5b3',
           botName: 'YachtBot',
-          botConvoDescription: "Let's find you your perfect yacht"
+          botConvoDescription: ''
         })
     </script>
   </body>
