--- a/embedded.html
+++ b/embedded.html
@@ -10,7 +10,7 @@
         window.botpressWebChat.init({
           host: 'https://tightropechat.herokuapp.com',
           brokerageId: '5ce5d0ac9debbe001785f5ba',
-          botName: '',
+          botName: 'YachtBot',
           botConvoDescription: ''
         })
     </script>
