--- a/embedded.html
+++ b/embedded.html
@@ -9,8 +9,8 @@
     <script type="text/javascript">
         window.botpressWebChat.init({
           host: 'https://tightropechat.herokuapp.com',
-          brokerageId: '5ce5d0ac9debbe001785f5ba',
-          botName: 'YachtBot',
+          brokerageId: '5cf033aa2a3ba200170efc61',
+          botName: 'BrokerBot',
           botConvoDescription: ''
         })
     </script>
